--- a/package.json
+++ b/package.json
@@ -23,13 +23,10 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
-
-    
-
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "recharts": "^2.1.8",
     "redux-devtools-extension": "^2.13.9"
-
   },
   "scripts": {
     "start": "react-scripts start",
